# Prototype-LMS-Databricks

./: .cursorrules  .env.example  .env.local.example  .env.test.example  .gitignore  CLAUDE.md  README.md  SUPABASE_SETUP.md  app.staging.yaml  app.yaml  db.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  visual-guide.md  vitest.config.js
.claude/: README.md
.cursor/: LINEAR_MCP_TOOLS.md  LINEAR_SETUP.md  mcp.json
Archive/: 260126_IR-upliftsizing-backup.xlsx
Charts/: Conversion Summary Tom vs Chad.pptx  Tom vs Chad report showdown delta.pptx  all_detail_weekly_conversion_table.pptx  ir_weekly_conversion_table.pptx
NewOpportunities/: carrara-approach-doc-reporting.md  carrara-approach-one-pager.md  meeting-notes-nick-2026-02-25.md
docs/: 2026-02-21-lead-management-system-design.md  2026-02-23-lms-prototype-design.md  2026-02-23-lms-prototype-plan.md  CLAUDE.md  DATABRICKS-DATABASE-SETUP.md  DEPLOYMENT-WORKFLOW.md  DatabricksLearnings.md  EDGE-FUNCTIONS-TROUBLESHOOTING.md  FRONT-END_test.md  GM-VIEW-IMPLEMENTATION-PLAN.md  GM-VIEW-LINEAR-TICKETS.md  Gim-TownhallStrategy.md  HANDOFF-BRIEF.md  HANDOFF-ETL-PHASE2.md  INTERACTIVE-CHART-OVERLAY-ARCHITECTURE.md  LINEAR-ISSUES-CONVERSION-BREAKDOWN.md  LOCAL-DEV-SETUP.md  LOCAL-RESET-RUNBOOK.md  LocalDevTesting.md  MCP-AUTOSTART.md  MERGE-NOTES-BRYAN-UPLOAD.md  METRICS-AUDIT.md  ORG-MAPPING-SETUP.md  PLAN-CONFIRM-NUM-AS-UUID.md  PORTING-TO-DATABRICKS.md  PROD-READY.md  PROJECT-LEAD-FEEDBACK-SCOPE.md  ROUTE-MAP.md  STAGING-SETUP.md  TESTING_COMPLIANCE.md  TRANSLOG-Handling.md  (+12 more)
(+805 files in other folders)
